--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "title": "YW Blog",
     "author": "YW <neverset123@aliyun.com>",
     "version": "1.7.0",
-    "homepage": "http://neverset123.github.io",
+    "homepage": "http://neverset123.github.io/YWHome",
     "repository": {
         "type": "git",
         "url": "https://github.com/neverset123/YWHome"
